style.css
/* ... */
.l-pl-1-25 {
  padding-left: 1.25rem; /* 20px */
}

.l-pl-1-5 {
  padding-left: 1.5rem; /* 24px */
}

.l-pl-2 {
  padding-left: 2rem; /* 32px */
}

.l-pl-2-25 {
  padding-left: 2.25rem; /* 36px */
}



 /* Right padding */

 .l-pr-1 {
  padding-left: 1rem; /* 16px */
}

.l-pr-1-25 {
  padding-left: 1.25rem; /* 20px */
}

.l-pr-1-5 {
  padding-left: 1.5rem; /* 24px */
}

.l-pr-2 {
  padding-left: 2rem; /* 32px */
}

.l-pr-2-25 {
  padding-left: 2.25rem; /* 36px */
}


/* Horizontal Paddings */

.l-px-1 {
  padding-right: 1rem; /* 16px */
  padding-left: 1rem; /* 16px */
}

.l-px-1-25 {
  padding-right: 1.25rem; /* 20px */
  padding-left: 1.25rem; /* 20px */
}

.l-px-1-5 {
  padding-right: 1.5rem; /* 24px */
  padding-left: 1.5rem; /* 24px */
}

.l-px-2 {
  padding-right: 2rem; /* 32px */
  padding-left: 2rem; /* 32px */
}

.l-px-2-25 {
  padding-right: 2.25rem; /* 36px */
  padding-left: 2.25rem; /* 36px */
}


/* Vertical Paddings */

.l-py-1 {
  padding-top: 1rem;     /* 16px */
  padding-bottom: 1rem; /* 16px */
}

.l-py-1-25 {
  padding-top: 1.25rem;     /* 20px */
  padding-bottom: 1.25rem; /* 20px */
}

.l-py-1-5 {
  padding-top: 1.5rem;     /* 24px */
  padding-bottom: 1.5rem; /* 24px */
}

.l-py-2 {
  padding-top: 2rem;     /* 32px */
  padding-bottom: 2rem; /* 32px */
}

.l-py-2-25 {
  padding-top: 2.25rem;     /* 36px */
  padding-bottom: 2.25rem; /* 36px */
}


/* === Base layout classes === */

/* Block elements */
.l-block{
  display: block; /* Display as block */
}

/* Flexbox container */
.l-flex {
  display: flex; /* Display as flex container */
}

/* Flex direction */
.l-flex-row-reverse { 
  flex-direction: row-reverse; /* Reverse row direction */
}

.l-flex-column-reverse {
  flex-direction: column-reverse; /* Reverse column direction */
}

.l-flex-column {
  flex-direction: column; /* Column direction */
}

.l-flex-row {
  flex-direction: row; /* Row direction */
}

/* === Flex wrap === */

.l-flex-wrap {
  flex-wrap: wrap; /* Wrap flex items */
}

.l-flex-nowrap {
  flex-wrap: nowrap; /* No wrapping */
}

/* Flex justify content */
.l-flex-justify-center {
  justify-content: center; /* Center justify content */
}

.l-flex-justify-between {
  justify-content: space-between; /* Space between justify content */
}

.l-flex-justify-around { 
  justify-content: space-around; /* Space around justify content */
}

.l-flex-justify-evenly { 
  justify-content: space-evenly; /* Space evenly justify content */
}

/* Flex align items */
.l-flex-align-center {
  align-items: center; /* Center align items */
}


/* === Grid classes === */

/* Grid container */
.l-grid {
  display: grid; /* Display as grid container */
}

/* Grid gap */
.l-grid-gap-1 {
  gap: 1rem; /* Set gap between grid items */
}


/* Grid columns */
.l-grid-cols-2 {
  grid-template-columns: repeat(2, 1fr); /* Two columns */
}

.l-grid-cols-3 {
  grid-template-columns: repeat(3, 1fr); /* Three columns */
}


/* === Gap classes === */

/* Gap size */
.l-gap-0 { 
  gap: 0rem; /* No gap */
}

.l-gap-1 {
   gap: 1rem; /* Small gap */
}

.l-gap-2 { 
  gap: 2rem; /* Large gap */
}


/* === Position classes === */

/* Position types */
.l-relative {
  position: relative; /* Relative positioning */
}

.l-absolute {
  position: absolute; /* Absolute positioning */
}

.l-fixed {
  position: fixed; /* Fixed positioning */
}


/* === Position offsets === */

/* Top offset */
.l-top-0 {
  top: 0; /* Top edge */
}

/* Right offset */
.l-right-0 {
  right: 0; /* Right edge */
}

/* Bottom offset */
.l-bottom-0 {
  bottom: 0; /* Bottom edge */
}

/* Left offset */
.l-left-0 {
  left: 0; /* Left edge */
}


/* === Z index modifiers === */

/* Z-index level */
.l-z-index-1 {
  z-index: 1; /* Z-index 1 */
}

.l-z-index-2 {
  z-index: 2; /* Z-index 2 */
}


/* === Overflow === */

/* Hidden overflow */
.l-overflow-hidden {
  overflow: hidden; /* Hide overflow */
}

/* Scrollable overflow */
.l-overflow-scroll {
  overflow: scroll; /* Add scrollbar */
}

/* Auto overflow */
.l-overflow-auto {
  overflow: auto; /* Auto scrollbar */
}

/* Visible overflow */
.l-overflow-visible {
  overflow: visible; /* Visible overflow */
}


/* === Conatiners === */

/* Mobile container */
.u-container-mobile{
  max-width: 100%;
  margin: 0 auto; 
  padding: 0 20px;
  box-sizing: border-box; 
}


/* Full-width container */

.u-full-width-container {
  width: 100%; 
  padding:0 20px; 
  box-sizing: border-box; 
}


/* Desktop container */
@media (min-width: 768px) {

.u-container-desktop {
  max-width: 1200px; 
  margin: 0 auto; 
  padding: 0 20px;
  box-sizing: border-box; 
}

}

/* === Style header for mobile  === */

/* Style the mobile navbar */

.header-navbar__desk{
  display: none;
}

/* Style header */
header{
  background-color: var(--clr-secondary-bg);
  color: var(--clr-body-text);
}


/* Style links in header */
header ul a{
  text-decoration: none;
  color: var(--clr-body-text);
}

/* Style mobile navbar */
    
.header-navbar__mobile{
  width: 100%;
  z-index: 1000;
  background-color: var(--clr-secondary-bg);  
}

/* Style mobile dropdown navbar*/

.dropdown-menu {
  display: none;
  top: 60%;
  background-color: var(--clr-transparent);
  width: 100%;
}


/* Style mobile dropdown navbar list*/

.dropdown-menu li {
  list-style: none;
  margin: 5px 0;
 height: 150px;
 text-transform: uppercase;
 font-size: 20px;
}

/* Style mobile dropdown navbar links*/

.dropdown-menu li a {
  text-decoration: none;
  color: var(--clr-body-text);

}

/* Style mobile dropdown navbar image*/

.dropdown-menu img{
  margin-right: 7px;
}

/* Show mobile dropdown navbar when toggle clicked*/
.show-dropdown {
  display: block !important;
}

/* For mobile navbar */
.dropdown-menu li:hover{
 color: var(--clr-hover);
}

/* For desktop navbar */
.dropdown-menu__desk li:hover{
color: var(--clr-hover);
}


/* === Style hero section for mobile  === */

.slider__container {
  transition: transform 0.3s ease;
}
/* ... */

